# HUUM_classification

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/huum_classification/: huum_classification.py
