[metadata]
# replace with your username:
name = huum_classification-SBerendsen
version = 1.0.0
author = Sven Berendsen
author_email = s.berendsen2@newcastle.ac.uk
description = Classifies sub-hourly time series according to their diurnal patterns.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nclwater/HUUM_classification
project_urls =
    Bug Tracker = https://github.com/nclwater/HUUM_classification/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
